# booster_action_manager

./: CMakeLists.txt  package.xml
include/action_manager/: action_manager.hpp  change_mode_client.hpp  control_enum.hpp  parser.hpp  trajectory_client.hpp  trajectory_structs.hpp
include/action_manager/node/: action_manager_node.hpp
src/: action.cpp  action_manager.cpp  change_mode_client.cpp  dummy.cpp  main.cpp  parser.cpp  trajectory_client.cpp
src/node/: action_manager_node.cpp
test/: test_waving_flag_json.cpp
